<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/dialogwidth"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialogbg"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:layout_marginBottom="32dp"
    android:layout_marginTop="32dp"
>
<LinearLayout 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_alignParentTop="true"
	android:orientation="vertical"
	android:id="@+id/toplayer"
	android:padding="8dp"
>

<TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/importcoins"
        android:textColor="#000000"
        android:textSize="16dp"
        android:layout_marginTop="10dp"
/>


<TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text=""
        android:textColor="#777777"
        android:textSize="14dp"
        android:layout_marginTop="16dp"
	android:id="@+id/infotext"
/>

<LinearLayout
	android:id="@+id/filebutton"
	android:layout_width="220dp"
	android:layout_height="48dp"
	android:layout_gravity="center"
	android:gravity="center"
	android:clickable="true"
	android:background="@drawable/buttoncommon"
       	android:layout_marginTop="16dp"
	android:padding="8dp"
>
	<TextView
	        android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
	        android:gravity="center"
        	android:layout_gravity="center"
	        android:text="@string/selectfile"
        	android:textColor="#FFFFFF"
	        android:textSize="14dp"
	/>

</LinearLayout>



</LinearLayout>

<!-- buttons -->

<LinearLayout
	android:id="@+id/buttonwrapper"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="14dp"
       	android:gravity="center"
	android:background="@drawable/border"
	android:layout_alignParentBottom="true"
>
	<LinearLayout
		android:id="@+id/closebutton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="1"
       		android:gravity="center"
		android:clickable="true"
	>
		<TextView
			android:layout_marginTop="12dp"
			android:layout_marginBottom="12dp"
        		android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
        		android:gravity="center|top"
	        	android:layout_gravity="center|top"
	        	android:text="@string/close"
		        android:textColor="#777777"
        		android:textSize="12dp"
		/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/importbutton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="1"
	       	android:gravity="center"
		android:clickable="true"
		android:background="@drawable/buttonrightbg"
	>
		<TextView
			android:id="@+id/importtv"
			android:layout_marginTop="12dp"
			android:layout_marginBottom="12dp"
        		android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
        		android:gravity="center|top"
	        	android:layout_gravity="center|top"
	        	android:text="@string/importstr"
		        android:textColor="#FFFFFF"
        		android:textSize="12dp"
		/>
	</LinearLayout>
</LinearLayout>

<!-- /buttons -->


</LinearLayout>
